Initial release debianized

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-google-pacman (0.1) suroboyo; urgency=low
+note5 (0.1) suroboyo; urgency=low
 
   * Initial release.
 
- -- Rahman Yusri Aftian <aftian@di.blankon.in>  Tue, 08 Oct 2013 07:05:52 +0700
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Tue, 08 Oct 2013 07:09:24 +0700
  
