Change Name Binary

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+note5 (0.2) suroboyo; urgency=low
+
+  * Change name binary
+
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Tue, 08 Oct 2013 07:13:04 +0700
+
 note5 (0.1) suroboyo; urgency=low
 
   * Initial release.
