--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+note5 (0.3) suroboyo; urgency=low
+
+  * Add icon for note5
+
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Tue, 08 Oct 2013 18:59:53 +0700
+
 note5 (0.2) suroboyo; urgency=low
 
   * Change name binary
