--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+note5 (0.4) suroboyo; urgency=low
+
+  * debian/copyright
+
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Tue, 08 Oct 2013 19:10:47 +0700
+
 note5 (0.3) suroboyo; urgency=low
 
   * Add icon for note5
