--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+note5 (0.5) suroboyo; urgency=low
+
+  * Change: index.html custom theme
+
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Tue, 08 Oct 2013 19:12:22 +0700
+
 note5 (0.4) suroboyo; urgency=low
 
   * debian/copyright
-
- -- Rahman Yusri Aftian <aftian@di.blankon.in>  Tue, 08 Oct 2013 19:10:47 +0700
+  
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Tue, 08 Oct 2013 19:12:19 +0700
 
 note5 (0.3) suroboyo; urgency=low
 
