section text editor

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-note5 (0.7) suorboyo; urgency=low
+note5 (0.7) suroboyo; urgency=low
 
   * note.desktop Section TextEditor
 
- -- Rahman Yusri Aftian <aftian@di.blankon.in>  Tue, 08 Oct 2013 13:14:58 +0000
+ -- Rahman Yusri Aftian <aftian@di.blankon.in>  Tue, 08 Oct 2013 20:17:45 +0700
 
 note5 (0.6) suroboyo; urgency=low
 
